# image_crop

./: CMakeLists.txt  image_crop.cpp
